# Fish_detection_and_tracking

./: .gitignore  Configs.py  Dataset.py  FastAPI.py  Presentation.pptx  README.md  model.py  torch_model.py  tracker.py  train.py
cpp_inference/: CMakeLists.txt  main.cpp
templates/: upload.html
