cmake_minimum_required(VERSION 3.10)
set(CMAKE_CUDA_COMPILER "/usr/local/cuda-11.8/bin/nvcc")
set(CMAKE_CUDA_ARCHITECTURES "native")
project(fish_detection LANGUAGES CXX CUDA)
set(CMAKE_CXX_STANDARD 17)
set(Torch_DIR)
set(OpenCV_DIR)
find_package(Torch REQUIRED PATHS ${Torch_DIR})
find_package(OpenCV REQUIRED PATHS ${OpenCV_DIR} )

add_executable(fish_detection main.cpp)
target_link_directories(${PROJECT_NAME} PRIVATE ${OPENCV_LIBRARIES} ${Torch_DIR}/lib/)
target_link_libraries(${PROJECT_NAME} PRIVATE ${OPENCV_LIBS} ${TORCH_LIBRARIES})
target_include_directories(${PROJECT_NAME} PRIVATE ${OpenCV_INCLUDE_DIRS} ${Torch_DIR}/include/)